--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <!-- navbar all -->
     <div class="totalnav">
-        <!-- navbar1 -->
+        <!-- navbar -->
         <div class="navbar">
             <div class="topic">
                 <h1>POLITIFACT</h1>
@@ -29,7 +29,8 @@
                 <p><a style="text-decoration: none;" href="">feedback</a></p>
             </div>
         </div>
-        <!-- navbar2 -->
+        <!-- <hr> -->
+        <!-- navbar1 -->
         <div class="navbar1">
             <div class="input">
                 <input type="text" placeholder="search">
