--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p><a style="text-decoration: none;" href="">feedback</a></p>
             </div>
         </div>
-        <!-- <hr> -->
+        <hr height="1px">
         <!-- navbar1 -->
         <div class="navbar1">
             <div class="input">
