--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             electing a politician -especilly not one who leads a that<br> status party dedicated to uppholiding that
             status quo.
         </p>
-        <button><a href="">your opnion</a></button>
+        <!-- <button><a href="">your opnion</a></button> -->
     </div>
     <!-- section2 -->
     <div class="section2">
