--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             electing a politician -especilly not one who leads a that<br> status party dedicated to uppholiding that
             status quo.
         </p>
-        <!-- <button><a href="">your opnion</a></button> -->
+        <button><a href="">your opnion</a></button>
     </div>
     <!-- section2 -->
     <div class="section2">
@@ -107,7 +107,7 @@
             <h2>Just because you do not take an interest in politics doesn't mean politics won't<br>
                 azer duskam take an interest in you
             </h2>
-            <!-- <button><a href="">Join now</a></button> -->
+            <button><a href="">Join now</a></button>
         </div>
       <!-- section4 -->
         <div class="section4">
