--- a/pages/manifesto/complte.html
+++ b/pages/manifesto/complte.html
@@ -36,8 +36,8 @@
                         <div class="dropdown">
                             <li><a class="dropbtn" href="">manifesto</a></li>
                             <div class="dropdown-content">
-                                <a href="manifesto.html">Bending</a>
-                                <a href="manifesto.html">completed</a>
+                                <li><a href="../manifesto/bending.html">Bending</a></li>
+                                <li><a href="../manifesto/complte.html">completed</a></li>
                             </div>
                         </div>
 
