--- a/pages/portfolio/profile/profile.html
+++ b/pages/portfolio/profile/profile.html
@@ -36,8 +36,8 @@
                         <div class="dropdown">
                             <li><a class="dropbtn" href="#">manifesto</a></li>
                             <div class="dropdown-content">
-                                <a href="../../manifesto/bending.html">Bending</a>
-                                <a href="../../manifesto/complte.html">completed</a>
+                               <li> <a href="../../manifesto/bending.html">Bending</a></li>
+                                <li><a href="../../manifesto/complte.html">completed</a></li>
                             </div>
                         </div>
 
@@ -46,8 +46,8 @@
                         <div class="dropdown">
                             <li><a class="dropbtn" href="">more</a></li>
                             <div class="dropdown-content">
-                                <a href="">Governer list</a>
-                                <a href="">MLA list</a>
+                               <li><a href="">Governer list</a></li> 
+                                <li><a href="">MLA list</a></li>
                             </div>
                             
                         </div>
@@ -63,8 +63,7 @@
         <div class="cm">
             <div class="cmimage">
                 <h1>chief minister</h1>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZi85uI1JjktoBhMARMO9XZj8VB9eLN6JF9Q&usqp=CAU"
-                    width="290px" height="380px" alt="">
+                 <img src="../../../assets/images/mk stalin.png" width="280px" height="300px" alt="">
             </div>
             <div class="cmcontent">
                 <h2>Biography</h2>
