--- a/pages/manifesto/bending.html
+++ b/pages/manifesto/bending.html
@@ -41,13 +41,13 @@
                             </div>
                         </div>
 
-                        <li><a href="">past leaders</a></li>
+                        <li><a href="../passt leaders/past leaders.html">past leaders</a></li>
 
                         <div class="dropdown1">
                             <li><a class="dropbtn1" href="">more</a></li>
                             <div class="dropdown-content1">
-                                <a href="">Governer list</a>
-                                <a href="">MLA list</a>
+                                <a href="../more/Governer list.html">Governer list</a>
+                                <a href="../more/mla.html">MLA list</a>
                             </div>
                             
                         </div>
