--- a/pages/manifesto/complte.html
+++ b/pages/manifesto/complte.html
@@ -34,10 +34,10 @@
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
                         <div class="dropdown">
-                            <li><a class="dropbtn" href="">manifesto</a></li>
+                            <ul><li><a class="dropbtn" href="">manifesto</a></li></ul>
                             <div class="dropdown-content">
-                                <li><a href="../manifesto/bending.html">Bending</a></li>
-                                <li><a href="../manifesto/complte.html">completed</a></li>
+                                <a href="../manifesto/bending.html">Bending</a>
+                                <a href="../manifesto/complte.html">completed</a>
                             </div>
                         </div>
 
