--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="pages/portfolio/potfolio.html">Portfolio</a></li>
                         <div class="dropdown">
-                            <li><a class="dropbtn" href="">manifesto</a></li>
+                            <li><a class="dropbtn" href="#">manifesto</a></li>
                             <div class="dropdown-content">
-                                <a href="manifesto.html">Bending</a>
-                                <a href="manifesto.html">completed</a>
+                                <a href="pages/manifesto/bending.html">Bending</a>
+                                <a href="pages/manifesto/complte.html">completed</a>
                             </div>
                         </div>
 
-                        <li><a href="">past leaders</a></li>
+                        <li><a href="pages/passt leaders/past leaders.html">past leaders</a></li>
 
                         <div class="dropdown1">
                             <li><a class="dropbtn1" href="">more</a></li>
                             <div class="dropdown-content1">
-                                <a href="">Governer list</a>
-                                <a href="">MLA list</a>
+                                <a href="pages/more/Governer list.html">Governer list</a>
+                                <a href="pages/more/mla.html">MLA list</a>
                             </div>
                             
                         </div>
@@ -158,41 +158,41 @@
             </div>
         </div>
     </div>
-    <!-- footer -->
-    <div class="footer">
-        <div class="foot">
-            <h1>politic</h1>
-            <p>
+   <!-- footer -->
+   <div class="footer">
+    <div class="foot">
+        <h1>politic</h1>
+        <p>
 
-                There are many variations of passages of Lorem Ipsum available,
-                but the.There are many variations of passages
-            </p>
-            <img src="assets/images/icon-facebook.svg" alt="">
-            <img src="assets/images/icon-instagram.svg" alt="">
-            <img src="assets/images/icon-pinterest.svg" alt="">
-            <img src="assets/images/icon-twitter.svg" alt="">
-            <p>&copy;2022</p>
+            There are many variations of passages of Lorem Ipsum available,
+            but the.There are many variations of passages
+        </p>
+        <img src="assets/images/icon-facebook.svg" alt="">
+        <img src="assets/images/icon-instagram.svg" alt="">
+        <img src="assets/images/icon-pinterest.svg" alt="">
+        <img src="assets/images/icon-twitter.svg" alt="">
+        <p>&copy;2022</p>
 
-        </div>
-        <div class="foot1">
-            <h1>IMPORTANT INFO</h1>
-            <h3>About Us</h3>
-            <h3>Annual Reports</h3>
-            <h3>Our Approch</h3>
-            <h3>Statistics</h3>
-        </div>
-        <div class="foot1">
-            <h1>IMPORTANT INFO</h1>
-            <h3>Donet</h3>
-            <h3>Quick contact</h3>
-            <h3>Volunteer form</h3>
-            <h3>bloger</h3>
-        </div>
-        <div class="foot1">
-            <h1>instagram </h1>
-            <p>not available for this page</p>
-        </div>
     </div>
+    <div class="foot1">
+        <h1>IMPORTANT INFO</h1>
+        <p>About Us</p>
+        <p>Annual Reports</p>
+        <p>Our Approch</p>
+        <p>Statistics</p>
+    </div>
+    <div class="foot1">
+        <p>IMPORTANT INFO</p>
+        <p>Donet</p>
+        <p>Quick contact</p>
+        <p>Volunteer form</p>
+        <p>bloger</p>
+    </div>
+    <div class="foot1">
+        <h1>instagram </h1>
+        <p>not available for this page</p>
+    </div>
+</div>
 </body>
 
 </html>
