--- a/pages/manifesto/bending.html
+++ b/pages/manifesto/bending.html
@@ -300,13 +300,6 @@
             <p><strong>status:</strong>
                  </p>
         </div>
-        <var><div class="rules">
-            <h2># </h2>
-            <hr>
-            <button class="rulescolor">Bending</button>
-            <p><strong>status:</strong>
-                 </p>
-        </div>
         <div class="rules">
             <h2># </h2>
             <hr>
@@ -321,7 +314,48 @@
             <p><strong>status:</strong>
                  </p>
         </div>
-    </var>
+        <div class="rules">
+            <h2># </h2>
+            <hr>
+            <button class="rulescolor">Bending</button>
+            <p><strong>status:</strong>
+                 </p>
+        </div>
+    </div>
+    <!-- footer -->
+    <div class="footer">
+        <div class="foot">
+            <h1>politic</h1>
+            <p>
+
+                There are many variations of passages of Lorem Ipsum available,
+                but the.There are many variations of passages
+            </p>
+            <img src="../../assets/images/icon-facebook.svg" alt="">
+            <img src="../../assets/images/icon-instagram.svg" alt="">
+            <img src="../../assets/images/icon-pinterest.svg" alt="">
+            <img src="../../assets/images/icon-twitter.svg" alt="">
+            <p>&copy;2022</p>
+
+        </div>
+        <div class="foot1">
+            <h1>IMPORTANT INFO</h1>
+            <p>About Us</p>
+            <p>Annual Reports</p>
+            <p>Our Approch</p>
+            <p>Statistics</p>
+        </div>
+        <div class="foot1">
+            <p>IMPORTANT INFO</p>
+            <p>Donet</p>
+            <p>Quick contact</p>
+            <p>Volunteer form</p>
+            <p>bloger</p>
+        </div>
+        <div class="foot1">
+            <h1>instagram </h1>
+            <p>not available for this page</p>
+        </div>
     </div>
     
 </body>
