--- a/pages/portfolio/potfolio.html
+++ b/pages/portfolio/potfolio.html
@@ -221,38 +221,38 @@
   <!-- footer -->
   <div class="footer">
     <div class="foot">
-      <h1>politic</h1>
-      <p>
+        <h1>politic</h1>
+        <p>
 
-        There are many variations of passages of Lorem Ipsum available,
-        but the.There are many variations of passages
-      </p>
-      <img src="../../assets/images/icon-facebook.svg" alt="">
-      <img src="../../assets/images/icon-instagram.svg" alt="">
-      <img src="../../assets/images/icon-pinterest.svg" alt="">
-      <img src="../../assets/images/icon-twitter.svg" alt="">
-      <p>&copy;2022</p>
+            There are many variations of passages of Lorem Ipsum available,
+            but the.There are many variations of passages
+        </p>
+        <img src="../../assets/images/icon-facebook.svg" alt="">
+        <img src="../../assets/images/icon-instagram.svg" alt="">
+        <img src="../../assets/images/icon-pinterest.svg" alt="">
+        <img src="../../assets/images/icon-twitter.svg" alt="">
+        <p>&copy;2022</p>
 
     </div>
     <div class="foot1">
-      <h1>IMPORTANT INFO</h1>
-      <h3>About Us</h3>
-      <h3>Annual Reports</h3>
-      <h3>Our Approch</h3>
-      <h3>Statistics</h3>
+        <h1>IMPORTANT INFO</h1>
+        <p>About Us</p>
+        <p>Annual Reports</p>
+        <p>Our Approch</p>
+        <p>Statistics</p>
     </div>
     <div class="foot1">
-      <h1>IMPORTANT INFO</h1>
-      <h3>Donet</h3>
-      <h3>Quick contact</h3>
-      <h3>Volunteer form</h3>
-      <h3>bloger</h3>
+        <p>IMPORTANT INFO</p>
+        <p>Donet</p>
+        <p>Quick contact</p>
+        <p>Volunteer form</p>
+        <p>bloger</p>
     </div>
     <div class="foot1">
-      <h1>instagram </h1>
-      <p>not available for this page</p>
+        <h1>instagram </h1>
+        <p>not available for this page</p>
     </div>
-  </div>
+</div>
 </body>
 
 </html>
