--- a/pages/passt leaders/past leaders.html
+++ b/pages/passt leaders/past leaders.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <div class="total">
+    <div class="totalnav">
         <!-- navbar1 -->
         <div class="navbar">
             <div class="topic">
-                <p>poltifact</p>
+                <h1>poltifact</h1>
             </div>
             <div class="topic1">
                 <p>contact</p>
@@ -36,18 +36,18 @@
                         <div class="dropdown">
                             <li><a class="dropbtn" href="">manifesto</a></li>
                             <div class="dropdown-content">
-                                <a href="manifesto.html">Bending</a>
-                                <a href="manifesto.html">completed</a>
+                                <a href="../manifesto/bending.html">Bending</a>
+                                <a href="../manifesto/complte.html">completed</a>
                             </div>
                         </div>
 
-                        <li><a href="">past leaders</a></li>
+                        <li><a href="../passt leaders/past leaders.html">past leaders</a></li>
 
                         <div class="dropdown1">
                             <li><a class="dropbtn1" href="">more</a></li>
                             <div class="dropdown-content1">
-                                <a href="">Governer list</a>
-                                <a href="">MLA list</a>
+                                <a href="../more/Governer list.html">Governer list</a>
+                                <a href="../more/mla.html">MLA list</a>
                             </div>
 
                         </div>
@@ -456,8 +456,42 @@
                     <td>Justice Party</td>
                 </tr>
             </tbody>
-
         </table>
+    </div>
+    <!-- footer -->
+    <div class="footer">
+        <div class="foot">
+            <h1>politic</h1>
+            <p>
+
+                There are many variations of passages of Lorem Ipsum available,
+                but the.There are many variations of passages
+            </p>
+            <img src="../../assets/images/icon-facebook.svg" alt="">
+            <img src="../../assets/images/icon-instagram.svg" alt="">
+            <img src="../../assets/images/icon-pinterest.svg" alt="">
+            <img src="../../assets/images/icon-twitter.svg" alt="">
+            <p>&copy;2022</p>
+
+        </div>
+        <div class="foot1">
+            <h1>IMPORTANT INFO</h1>
+            <p>About Us</p>
+            <p>Annual Reports</p>
+            <p>Our Approch</p>
+            <p>Statistics</p>
+        </div>
+        <div class="foot1">
+            <p>IMPORTANT INFO</p>
+            <p>Donet</p>
+            <p>Quick contact</p>
+            <p>Volunteer form</p>
+            <p>bloger</p>
+        </div>
+        <div class="foot1">
+            <h1>instagram </h1>
+            <p>not available for this page</p>
+        </div>
     </div>
 </body>
 
