--- a/pages/portfolio/profile/profile.html
+++ b/pages/portfolio/profile/profile.html
@@ -36,20 +36,20 @@
                         <div class="dropdown">
                             <li><a class="dropbtn" href="#">manifesto</a></li>
                             <div class="dropdown-content">
-                               <li> <a href="../../manifesto/bending.html">Bending</a></li>
-                                <li><a href="../../manifesto/complte.html">completed</a></li>
+                                <a href="../../manifesto/bending.html">Bending</a>
+                                <a href="../../manifesto/complte.html">completed</a>
                             </div>
                         </div>
 
-                        <li><a href="">past leaders</a></li>
+                        <li><a href="../../passt leaders/past leaders.html">past leaders</a></li>
 
                         <div class="dropdown">
                             <li><a class="dropbtn" href="">more</a></li>
                             <div class="dropdown-content">
-                               <li><a href="">Governer list</a></li> 
-                                <li><a href="">MLA list</a></li>
+                                <a href="../../more/Governer list.html">Governer list</a>
+                                <a href="../../more/mla.html">MLA list</a>
                             </div>
-                            
+
                         </div>
 
                     </ul>
@@ -63,7 +63,7 @@
         <div class="cm">
             <div class="cmimage">
                 <h1>chief minister</h1>
-                 <img src="../../../assets/images/mk stalin.png" width="280px" height="300px" alt="">
+                <img src="../../../assets/images/mk stalin.png" width="280px" height="300px" alt="">
             </div>
             <div class="cmcontent">
                 <h2>Biography</h2>
@@ -89,7 +89,8 @@
                     protecting him. <sup>[23][24][25]</sup> He wrote his final year BA exams while in prison.
                     <sup>[5]</sup> Stalin formed the
                     DMK youth wing. In 1982 Stalin became the youth wing secretary of DMK, a post he held for more than
-                    four decades.</p>
+                    four decades.
+                </p>
             </div>
         </div>
         <div class="cmcontent1">
@@ -150,7 +151,8 @@
                 scheme stating that
                 over 24% of the total recovery from learning loss can be attributed to the <sup>'</sup> Illam Thedi
                 Kalvi <sup>'</sup> sessions
-                and that the recovery has been a lot more progressive among the disadvantaged group.[</p>
+                and that the recovery has been a lot more progressive among the disadvantaged group.[
+            </p>
             <h2>Pudhumai Penn</h2>
             <p>Stalin launched the Moovalur Ramamirtham Ammaiyar Higher Education Assurance scheme titled 'Pudhumai
                 Penn' at a function
@@ -331,17 +333,17 @@
         </div>
         <div class="foot1">
             <h1>IMPORTANT INFO</h1>
-            <h3>About Us</h3>
-            <h3>Annual Reports</h3>
-            <h3>Our Approch</h3>
-            <h3>Statistics</h3>
+            <p>About Us</p>
+            <p>Annual Reports</p>
+            <p>Our Approch</p>
+            <p>Statistics</p>
         </div>
         <div class="foot1">
-            <h1>IMPORTANT INFO</h1>
-            <h3>Donet</h3>
-            <h3>Quick contact</h3>
-            <h3>Volunteer form</h3>
-            <h3>bloger</h3>
+            <p>IMPORTANT INFO</p>
+            <p>Donet</p>
+            <p>Quick contact</p>
+            <p>Volunteer form</p>
+            <p>bloger</p>
         </div>
         <div class="foot1">
             <h1>instagram </h1>
