--- a/pages/passt leaders/past leaders.html
+++ b/pages/passt leaders/past leaders.html
@@ -106,7 +106,7 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td><a href="">M.K.Stalin</a></td>
+                    <td><a href="../portfolio/profile/profile.html">M.K.Stalin</a></td>
                     <td>07 May 2021</td>
                     <td>Present</td>
                     <td>DMK</td>
