--- a/pages/more/Governer list.html
+++ b/pages/more/Governer list.html
@@ -59,6 +59,7 @@
     </div>
     <!-- governer list -->
     <div class="governer">
+        <h1>Past to present Governer lists</h1>
         <table>
             <thead>
                 <tr>
@@ -71,7 +72,7 @@
             <tbody>
             <tr>
                 <td>1</td>
-                <td><a href="">R. N. Ravi</a></td>
+                <td><a href="../portfolio/profile/profile.html">R. N. Ravi</a></td>
                 <td>10 September 2021</td>
                 <td>Present Governor</td>
             </tr>
