--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             electing a politician -especilly not one who leads a that<br> status party dedicated to uppholiding that
             status quo.
         </p>
-        <button><a href="">your opnion</a></button>
+        <button><a href="pages/your opinion/your opnion.html">your opnion</a></button>
     </div>
     <!-- section2 -->
     <div class="section2">
@@ -92,7 +92,7 @@
                 </p>
             </div>
             <div class="sideimage">
-                <img src="assets/images/bundestag-2463236__480.jpg" width="600px" height="305px" alt="">
+                <img src="assets/images/backround.jpg" width="500px" height="305px" alt="error image">
             </div>
         </div>
     </div>
@@ -140,19 +140,19 @@
         <h2 class="head">latest politics news</h2>
         <div class="news">
             <div class="news1">
-                <img src="assets/images/backround.jpg" width="300pxpx" alt="">
+                <img src="assets/images/backround.jpg" width="300pxpx" alt="error image">
                 <h2>politics</h2>
                 <p>mlmf;ldk;lfk;dkfjfnkvnfnv;lknf;lkvmoifm</p>
             </div>
             <div class="news1">
-                <img src="assets/images/backround.jpg" width="300pxpx" alt="">
+                <img src="assets/images/backround.jpg" width="300pxpx" alt="error image">
                 <h2>politics</h2>
                 <p>lkf;mflknlkjnflkvnfkblkmnblkjfn<br>l;kmglfdml;mflkm,fvm,fm;lvkmdf;km;lfkvm;lf
 
                 </p>
             </div>
             <div class="news1">
-                <img src="assets/images/backround.jpg" width="300px" alt="">
+                <img src="assets/images/backround.jpg" width="300px" alt="error image">
                 <h2>politics</h2>
                 <p>mflfdklkdf;lvmdfjmclkdmfnpoj</p>
             </div>
@@ -167,10 +167,10 @@
             There are many variations of passages of Lorem Ipsum available,
             but the.There are many variations of passages
         </p>
-        <img src="assets/images/icon-facebook.svg" alt="">
-        <img src="assets/images/icon-instagram.svg" alt="">
-        <img src="assets/images/icon-pinterest.svg" alt="">
-        <img src="assets/images/icon-twitter.svg" alt="">
+        <img src="assets/images/icon-facebook.svg" alt="error image">
+        <img src="assets/images/icon-instagram.svg" alt="error image">
+        <img src="assets/images/icon-pinterest.svg" alt="error image">
+        <img src="assets/images/icon-twitter.svg" alt="error image">
         <p>&copy;2022</p>
 
     </div>
