--- a/pages/more/Governer list.html
+++ b/pages/more/Governer list.html
@@ -26,7 +26,7 @@
         <div class="navbar1">
             <div class="input">
                 <input type="text" placeholder="search">
-                <img src="../../assets/images/3917132.svg" width="20px" height="20px" alt="">
+                <img src="../../assets/images/3917132.svg" width="20px" height="20px" alt="error image">
             </div>
             <div class="nav">
                 <nav>
