--- a/pages/portfolio/potfolio.html
+++ b/pages/portfolio/potfolio.html
@@ -60,149 +60,149 @@
   <!-- portfolio start -->
   <div class="lists">
     <div class="list1">
-      <a href="../portfolio/profile/profile.html"><img src="../../assets/images/mk stalin.png" alt=""></a>
+      <img src="../../assets/images/mk stalin.png" alt="error image">
       <h3>name: m.k. stalin</h3>
       <button><a href="../portfolio/profile/profile.html">view profile</a></button>
     </div>
   </div>
   <div class="lists1">
     <div class="list2">
-      <a href=""><img src="../../assets/images/duraimurugan.jpg" alt=""></a>
+      <img src="../../assets/images/duraimurugan.jpg" alt="error image">
       <h3>name: Durai Murugan</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/kn neru.jpg" alt=""></a>
+      <img src="../../assets/images/kn neru.jpg" alt="error image">
       <h3>name: K. N. Nehru</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/periyasami.jpg" alt=""></a>
+      <img src="../../assets/images/periyasami.jpg" alt="error image">
       <h3>name: I. Periyasamy</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/ponkmudi.jpg" alt=""></a>
+      <img src="../../assets/images/ponkmudi.jpg" alt="error image">
       <h3>name: K. Ponmudy</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/velu.jpg" alt=""></a>
+      <img src="../../assets/images/velu.jpg" alt="error image">
       <h3>name:E. V. Velu</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/pannerselvam.jpg" alt=""></a>
+      <img src="../../assets/images/pannerselvam.jpg" alt="error image">
       <h3>name:M. R. K. Panneerselvam </h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/ranachanran.jpg" alt=""></a>
+      <img src="../../assets/images/ranachanran.jpg" alt="error image">
       <h3>name:Ramachandran</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/tanarasu.jpg" alt=""></a>
+      <img src="../../assets/images/tanarasu.jpg" alt="error image">
       <h3>name: Thangam Thennarasu</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/regubathy.jpg" alt=""></a>
+      <img src="../../assets/images/regubathy.jpg" alt="error image">
       <h3>name: S. Regupathy</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/muthusamy.jpg" alt=""></a>
+      <img src="../../assets/images/muthusamy.jpg" alt="error image">
       <h3>name:S. Muthusamy</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/periyakaruppan.jpg" alt=""></a>
+      <img src="../../assets/images/periyakaruppan.jpg" alt="error image">
       <h3>name: K. R. Periyakaruppan</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/anbarasan.jpg" alt=""></a>
+      <img src="../../assets/images/anbarasan.jpg" alt="error image">
       <h3>name:T. M. Anbarasan</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/saminathan.jpg" alt=""></a>
+      <img src="../../assets/images/saminathan.jpg" alt="error image">
       <h3>name:M. P. Saminathan</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/geeth.jpg" alt=""></a>
+      <img src="../../assets/images/geeth.jpg" alt="error image">
       <h3>name:P. Geetha Jeevan</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/anith.jpg" alt=""></a>
+      <img src="../../assets/images/anith.jpg" alt="error image">
       <h3>name:Anitha</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/sivakumar.jpg" alt=""></a>
+      <img src="../../assets/images/sivakumar.jpg" alt="error image">
       <h3>name:S. S. Sivasankar</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/ramachandran.jpg" alt=""></a>
+      <img src="../../assets/images/ramachandran.jpg" alt="error image">
       <h3>name:K. Ramachandran</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/sakkaraporni.jpg" alt=""></a>
+      <img src="../../assets/images/sakkaraporni.jpg" alt="error image">
       <h3>name: R. Sakkarapani</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/sendil balji.jpg" alt=""></a>
+      <img src="../../assets/images/sendil balji.jpg" alt="error image">
       <h3>name:V. Senthil Balaji</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/rs ganthi.jpg" alt=""></a>
+      <img src="../../assets/images/rs ganthi.jpg" alt="error image">
       <h3>name: R. Gandhi</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/subramani.jpg" alt=""></a>
+      <img src="../../assets/images/subramani.jpg" alt="error image">
       <h3>name: M. Subramaniam</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/mirthi.jpg" alt=""></a>
+      <img src="../../assets/images/mirthi.jpg" alt="error image">
       <h3>name: P. Moorthy</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/rajakannapan.jpg" alt=""></a>
+      <img src="../../assets/images/rajakannapan.jpg" alt="error image">
       <h3>name: Raja Kannappan</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/segar babu.jpg" alt=""></a>
+      <img src="../../assets/images/segar babu.jpg" alt="error image">
       <h3>name:P. K. Sekar Babu</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/palanivel.jpg" alt=""></a>
+      <img src="../../assets/images/palanivel.jpg" alt="error image">
       <h3>name:Palanivel Thiagarajan</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/nasar.jpg" alt=""></a>
+      <img src="../../assets/images/nasar.jpg" alt="error image">
       <h3>name:S.M. Nasar</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/magesh.jpg" alt=""></a>
+      <img src="../../assets/images/magesh.jpg" alt="error image">
       <h3>name:Anbil Mahesh</h3>
       <button><a href="">view profile</a></button>
     </div>
     <div class="list2">
-      <a href=""><img src="../../assets/images/mano.jpg" alt=""></a>
+      <img src="../../assets/images/mano.jpg" alt="error image">
       <h3>name:Mano Thangaraj</h3>
       <button><a href="">view profile</a></button>
     </div>
@@ -210,7 +210,7 @@
   </div>
   <!-- pie chart -->
   <div class="piechart">
-    <img src="../../assets/images/Education qualification of ministers.svg" alt="">
+    <img src="../../assets/images/Education qualification of ministers.svg" alt="error image">
   </div>
   <!-- join table -->
   <div class="joinbox">
@@ -227,10 +227,10 @@
             There are many variations of passages of Lorem Ipsum available,
             but the.There are many variations of passages
         </p>
-        <img src="../../assets/images/icon-facebook.svg" alt="">
-        <img src="../../assets/images/icon-instagram.svg" alt="">
-        <img src="../../assets/images/icon-pinterest.svg" alt="">
-        <img src="../../assets/images/icon-twitter.svg" alt="">
+        <img src="../../assets/images/icon-facebook.svg" alt="error image">
+        <img src="../../assets/images/icon-instagram.svg" alt="error image">
+        <img src="../../assets/images/icon-pinterest.svg" alt="error image">
+        <img src="../../assets/images/icon-twitter.svg" alt="ERROR image">
         <p>&copy;2022</p>
 
     </div>
