--- a/pages/portfolio/profile/profile.html
+++ b/pages/portfolio/profile/profile.html
@@ -26,7 +26,7 @@
         <div class="navbar1">
             <div class="input">
                 <input type="text" placeholder="search">
-                <img src="../../../assets/images/3917132.svg" width="20px" height="20px" alt="">
+                <img src="../../../assets/images/3917132.svg" width="20px" height="20px" alt="error image">
             </div>
             <div class="nav">
                 <nav>
@@ -63,7 +63,7 @@
         <div class="cm">
             <div class="cmimage">
                 <h1>chief minister</h1>
-                <img src="../../../assets/images/mk stalin.png" width="280px" height="300px" alt="">
+                <img src="../../../assets/images/mk stalin.png" width="280px" height="300px" alt="error image">
             </div>
             <div class="cmcontent">
                 <h2>Biography</h2>
@@ -228,7 +228,7 @@
             </div>
         </div>
         <div class="survey">
-            <img src="../../../assets/images/personal  survey.svg" alt="">
+            <img src="../../../assets/images/personal  survey.svg" alt="error image">
         </div>
         <div class="electiontable">
             <h2>Election of M K stalin</h2>
@@ -324,10 +324,10 @@
                 There are many variations of passages of Lorem Ipsum available,
                 but the.There are many variations of passages
             </p>
-            <img src="../../../assets/images/icon-facebook.svg" alt="">
-            <img src="../../../assets/images/icon-instagram.svg" alt="">
-            <img src="../../../assets/images/icon-pinterest.svg" alt="">
-            <img src="../../../assets/images/icon-twitter.svg" alt="">
+            <img src="../../../assets/images/icon-facebook.svg" alt="error image">
+            <img src="../../../assets/images/icon-instagram.svg" alt="error image">
+            <img src="../../../assets/images/icon-pinterest.svg" alt="error image">
+            <img src="../../../assets/images/icon-twitter.svg" alt="error image">
             <p>&copy;2022</p>
 
         </div>
