--- a/pages/your opinion/your opnion.html
+++ b/pages/your opinion/your opnion.html
@@ -59,43 +59,43 @@
     <div class="opinionpoll">
         <form action=""><br><br>
             <label for=""> POLITICAL YOUR OPINION:</label></br><br><br>
-            <label for="quietsion" id="quiestion">
+            <label for="">
                1. How likely are you to go vote in the coming election?:
             </label><br>
             <input type="text" placeholder="Enter your opinion " required ><br>
-            <label for="quietsion" id="quiestion">
+            <label for="">
                 2.contacted an elected official:
             </label><br>
             <input type="text" placeholder="Enter your answer" required > <br>
-            <label for="quiertsion" id="quiestion">
+            <label for="">
                 3.Which political partydo you support?:
             </label><br>
             <input type="text" placeholder="which party give name " required><br>
-            <label for="quiestion" id="quiestion">
+            <label for="">
                  4. How much do you trust you the current goverment to work for you?:
             </label><br>
             <input type="text" placeholder="you like this government please mention" required ><br>
-            <label for="quietsion" for="quiestion">
+            <label for="">
                5. Reservetion should not be for low-income families only.
             </label><br>
             <input type="text" placeholder="Your opnion"><br>
-            <label for="quietsion" id="quiestion">
+            <label for="">
              6. Are you register to vote?:
             </label><br>
             <input type="text" placeholder="Yes or No"><br>
-            <label for="quiestion" id="quiestion">
+            <label for="">
               7. Do you like comfortable discussing politicsnwith other?:
             </label><br>
             <input type="text" placeholder="like or not like"><br>
-            <label for="quiestion">
+            <label for="">
                 8. we can trust the government to do what's right?:
             </label><br>
             <input type="text" placeholder="you trust"><br>
-            <label for="quiestion">
+            <label for="">
                 9. Attend a political rally,speach or event?
             </label><br>
             <input type="text" placeholder="give a answer"><br>
-            <label for="quiestion">
+            <label for="">
                 Addition your opinion
             </label><br>
             <input type="text" placeholder="Addition opinion"><br>
