--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
                         <li><a href="pages/passt leaders/past leaders.html">past leaders</a></li>
 
-                        <div class="dropdown1">
-                            <li><a class="dropbtn1" href="">more</a></li>
-                            <div class="dropdown-content1">
+                        <div class="dropdown">
+                            <li><a class="dropbtn" href="">more</a></li>
+                            <div class="dropdown-content">
                                 <a href="pages/more/Governer list.html">Governer list</a>
                                 <a href="pages/more/mla.html">MLA list</a>
                             </div>
