--- a/pages/manifesto/bending.html
+++ b/pages/manifesto/bending.html
@@ -43,9 +43,9 @@
 
                         <li><a href="../passt leaders/past leaders.html">past leaders</a></li>
 
-                        <div class="dropdown1">
-                            <li><a class="dropbtn1" href="">more</a></li>
-                            <div class="dropdown-content1">
+                        <div class="dropdown">
+                            <li><a class="dropbtn" href="">more</a></li>
+                            <div class="dropdown-content">
                                 <a href="../more/Governer list.html">Governer list</a>
                                 <a href="../more/mla.html">MLA list</a>
                             </div>
