--- a/pages/more/Governer list.html
+++ b/pages/more/Governer list.html
@@ -272,10 +272,10 @@
                 There are many variations of passages of Lorem Ipsum available,
                 but the.There are many variations of passages
             </p>
-            <img src="../../../assets/images/icon-facebook.svg" alt="">
-            <img src="../../../assets/images/icon-instagram.svg" alt="">
-            <img src="../../../assets/images/icon-pinterest.svg" alt="">
-            <img src="../../../assets/images/icon-twitter.svg" alt="">
+            <img src="../../assets/images/icon-facebook.svg" alt="">
+            <img src="../../assets/images/icon-instagram.svg" alt="">
+            <img src="../../assets/images/icon-pinterest.svg" alt="">
+            <img src="../../assets/images/icon-twitter.svg" alt="">
             <p>&copy;2022</p>
 
         </div>
