--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <div class="headvideo">
+        <video autoplay muted loop id="myVideo">
+            <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
+        </video>
+    </div>
     <div class="totalnav">
         <!-- navbar1 -->
         <div class="navbar">
@@ -63,7 +68,7 @@
     </div>
 
     <!-- mla page -->
-    <div class="governer">
+    <div class="governer mlalist">
         <h1>Tamila nadu MLA lists</h1>
         <table>
             <thead>
