--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h2>Just because you do not take an interest in politics doesn't mean politics won't<br>
                 azer duskam take an interest in you
             </h2>
-            <button><a href="">Join now</a></button>
+            <button><a href="pages/your opinion/join now.html">Join now</a></button>
         </div>
       <!-- section4 -->
         <div class="section4">
