--- a/pages/more/Governer list.html
+++ b/pages/more/Governer list.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <div class="headvideo">
+        <video autoplay muted loop id="myVideo">
+            <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
+        </video>
+    </div>
     <div class="totalnav">
         <!-- navbar1 -->
         <div class="navbar">
