--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <img src="assets/images/icon-instagram.svg" alt="error image">
         <img src="assets/images/icon-pinterest.svg" alt="error image">
         <img src="assets/images/icon-twitter.svg" alt="error image">
-        <p>&copy;2022</p>
+        &copy;2022
 
     </div>
     <div class="foot1">
