--- a/pages/more/Governer list.html
+++ b/pages/more/Governer list.html
@@ -281,7 +281,7 @@
             <img src="../../assets/images/icon-instagram.svg" alt="">
             <img src="../../assets/images/icon-pinterest.svg" alt="">
             <img src="../../assets/images/icon-twitter.svg" alt="">
-            <p>&copy;2022</p>
+            <!-- <p>&copy;2022</p> -->
 
         </div>
         <div class="foot1">
