--- a/pages/your opinion/your opnion.html
+++ b/pages/your opinion/your opnion.html
@@ -121,7 +121,7 @@
             <img src="../../assets/images/icon-instagram.svg" alt="error image">
             <img src="../../assets/images/icon-pinterest.svg" alt="error image">
             <img src="../../assets/images/icon-twitter.svg" alt="error image">
-            <p>&copy;2022</p>
+            <!-- <p>&copy;2022</p> -->
 
         </div>
         <div class="foot1">
