--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -2220,7 +2220,7 @@
             <img src="../../../assets/images/icon-instagram.svg" alt="">
             <img src="../../../assets/images/icon-pinterest.svg" alt="">
             <img src="../../../assets/images/icon-twitter.svg" alt="">
-            <p>&copy;2022</p>
+            <!-- <p>&copy;2022</p> -->
 
         </div>
         <div class="foot1">
