--- a/pages/more/daitails of mla/details of mla.html
+++ b/pages/more/daitails of mla/details of mla.html
@@ -37,7 +37,7 @@
                 <nav>
                     <ul>
                         <li><a href="../../../index.html">Home</a></li>
-                        <li><a href="../potfolio.html">Portfolio</a></li>
+                        <li><a href="../../potfolio.html">Portfolio</a></li>
                         <div class="dropdown">
                            <ul> <li><a class="dropbtn" href="#">manifesto</a></li></ul>
                             <div class="dropdown-content">
