--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -85,7 +85,7 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td><a href="">Gummidipoondi</a></td>
+                    <td><a href="../more/daitails of mla/details of mla.html">Gummidipoondi</a></td>
                     <td>T J Govindarajan</td>
                     <td>DMK</td>
                     <td>126,452</td>
