--- a/pages/manifesto/bending.html
+++ b/pages/manifesto/bending.html
@@ -98,8 +98,8 @@
             <h2>2# Concurrent List</h2>
             <hr>
             <button class="rulescolor">Pending</button>
-            <p><strong>status:</strong> Efforts will be taken to remove ‘Education’ from ‘Concurrent List’ and restore
-                it to ‘State List'
+            <p><strong>status:</strong> Efforts will be taken to remove <sup>'</sup> Education <sup>'</sup> from  <sup>'</sup> Concurrent List <sup>'</sup> and restore
+                it to <sup>'</sup> State List'
             </p>
         </div>
         <div class="rules">
