--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <!-- navbar all -->
     <div class="totalnav">
         <!-- navbar -->
+        <div class="headvideo1">
+            <video autoplay muted loop id="myVideo">
+                <source src="assets/images/Pattern - 85590.mp4" type="video/mp4">
+            </video>
+        </div>
         <div class="navbar">
             <div class="topic">
                 <h1>POLITIFACT</h1>
@@ -117,22 +122,22 @@
         <div class="section4">
             <div class="num1">
                 <h1>0k</h1>
-                <h3>active Volunteer</h3>
+                <p>active Volunteer</p>
             </div>
             <hr>
             <div class="num1">
                 <h1>131</h1>
-                <h3>campage now</h3>
+                <p>campage now</p>
             </div>
             <hr>
             <div class="num1">
                 <h1>612</h1>
-                <h3>area coverage</h3>
+                <p>area coverage</p>
             </div>
             <hr>
             <div class="num1">
                 <h1>2</h1>
-                <h3>project done</h3>
+                <p>project done</p>
             </div>
         </div>
 
