--- a/pages/manifesto/complte.html
+++ b/pages/manifesto/complte.html
@@ -29,7 +29,7 @@
                 <img src="../../assets/images/3917132.svg" width="20px" height="20px" alt="">
             </div>
             <div class="nav">
-                <nav>
+                <nav aria-label="nav-menu">
                     <ul>
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
