--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="headvideo">
         <video autoplay muted loop id="myVideo">
             <source src="assets/images/Indian - 40553.mp4" type="video/mp4">
+            <track default>
         </video>
     </div>
     <!-- navbar all -->
@@ -22,6 +23,7 @@
         <div class="headvideo1">
             <video autoplay muted loop id="myVideo">
                 <source src="assets/images/Pattern - 85590.mp4" type="video/mp4">
+                <track default/>
             </video>
         </div>
         <div class="navbar">
