--- a/pages/passt leaders/past leaders.html
+++ b/pages/passt leaders/past leaders.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-    <div class="totalnav">
+    <div class="totalnav"> <div class="headvideo1">
+        <video autoplay muted loop id="myVideo">
+            <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
+            <track default/>
+        </video>
         <!-- navbar1 -->
         <div class="navbar">
             <div class="topic">
