--- a/pages/portfolio/potfolio.html
+++ b/pages/portfolio/potfolio.html
@@ -29,7 +29,7 @@
         <img src="../../assets/images/3917132.svg" width="20px" height="20px" alt="">
       </div>
       <div class="nav">
-        <nav>
+        <nav aria-label="nav-menu">
           <ul>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
@@ -235,7 +235,7 @@
         <img src="../../assets/images/icon-instagram.svg" alt="error image">
         <img src="../../assets/images/icon-pinterest.svg" alt="error image">
         <img src="../../assets/images/icon-twitter.svg" alt="ERROR image">
-        <!-- <p>&copy;2022</p> -->
+        
 
     </div>
     <div class="foot1">
