--- a/pages/portfolio/profile/profile.html
+++ b/pages/portfolio/profile/profile.html
@@ -11,6 +11,11 @@
 
 <body>
     <div class="totalnav">
+        <div class="headvideo1">
+            <video autoplay muted loop id="myVideo">
+                <source src="../../../assets/images/Pattern - 85590.mp4" type="video/mp4">
+                <track default/>
+            </video>
         <!-- navbar1 -->
         <div class="navbar">
             <div class="topic">
@@ -29,7 +34,7 @@
                 <img src="../../../assets/images/3917132.svg" width="20px" height="20px" alt="error image">
             </div>
             <div class="nav">
-                <nav>
+                <nav aria-label="nav-menu">
                     <ul>
                         <li><a href="../../../index.html">Home</a></li>
                         <li><a href="../potfolio.html">Portfolio</a></li>
@@ -330,7 +335,7 @@
             <img src="../../../assets/images/icon-instagram.svg" alt="error image">
             <img src="../../../assets/images/icon-pinterest.svg" alt="error image">
             <img src="../../../assets/images/icon-twitter.svg" alt="error image">
-            <!-- <p>&copy;2022</p> -->
+            
 
         </div>
         <div class="foot1">
