--- a/pages/your opinion/join now.html
+++ b/pages/your opinion/join now.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <div class="totalnav">
+      <div class="headvideo1">
+        <video autoplay muted loop id="myVideo">
+            <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
+            <track default/>
+        </video>
         <!-- navbar1 -->
         <div class="navbar">
           <div class="topic">
@@ -27,7 +32,7 @@
             <img src="../../assets/images/3917132.svg" width="20px" height="20px" alt="">
           </div>
           <div class="nav">
-            <nav>
+            <nav aria-label="nav-menu">
               <ul>
                 <li><a href="../../index.html">Home</a></li>
                 <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
