--- a/pages/your opinion/your opnion.html
+++ b/pages/your opinion/your opnion.html
@@ -113,7 +113,7 @@
             <button><a href="../../index.html">Submit</a></button>
         </form>
     </div>
-    <!-- footer -->
+    footer
     <div class="footer">
         <div class="foot">
             <h1>politic</h1>
@@ -126,7 +126,6 @@
             <img src="../../assets/images/icon-instagram.svg" alt="error image">
             <img src="../../assets/images/icon-pinterest.svg" alt="error image">
             <img src="../../assets/images/icon-twitter.svg" alt="error image">
-            <!-- <p>&copy;2022</p> -->
 
         </div>
         <div class="foot1">
