--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="headvideo">
+    <div class="headvideo1">
         <video autoplay muted loop id="myVideo">
             <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
         </video>
@@ -896,6 +896,7 @@
                     <td><a href="">Salem (North)</a>
                     </td>
                     <td>R Rajendhiran</td>
+                    <td>DMK</td>
                     <td>93,432</td>
                     <td>7,588</td>
                     <td>46.17 %</td>
@@ -1087,6 +1088,7 @@
                 </tr>
                 <tr>
                     <td>110</td>
+                    <td><a href="">Coonoor</a></td>
                     <td>K. Ramachandran</td>
                     <td>DMK</td>
                     <td>61,820</td>
