--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- navbar -->
         <div class="headvideo1">
             <video autoplay muted loop id="myVideo">
-                <source src="../POLITIFACT/assets/images/Pattern - 85590.mp4" type="video/mp4">
+                <source src="assets/images/Pattern - 85590.mp4" type="video/mp4">
                 <track default/>
             </video>
         </div>
